<resources>
    <string name="app_name">Github App</string>
    <string name="base_url">https://api.github.com/</string>
    <string name="api_token">9f31a82c0a44b5f67e9cdada90f84d3a66ed2353</string>
    <string name="retry">Retry</string>
    <string name="repositories_count">Repos\n%d</string>
    <string name="followers_count">Followers\n%d</string>
    <string name="following_count">Following\n%d</string>
    <string name="repositories">Repositories</string>
    <string name="settings">Settings</string>
    <string name="from_id">From id</string>
    <string name="to_id">To id</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="initial_size">Init size</string>
    <string name="page_size">Page size</string>
    <string name="loading_error">Loading error</string>
</resources>
