<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:id="@+id/root"
    >

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_from" app:layout_constraintBottom_toBottomOf="@+id/et_from"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_to" app:layout_constraintBottom_toBottomOf="@+id/et_to"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_initial_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_initial_size"
                app:layout_constraintBottom_toBottomOf="@+id/et_initial_size"
        />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_page_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_page_size"
                app:layout_constraintBottom_toBottomOf="@+id/et_page_size"
        />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
        />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_from"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                android:layout_marginStart="8dp"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_initial_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_to"
                app:layout_constraintStart_toStartOf="@+id/et_from"
                app:layout_constraintStart_toEndOf="@+id/barrier"
        />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_page_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_initial_size"
                app:layout_constraintStart_toEndOf="@+id/barrier"

                android:layout_marginStart="8dp"/>

        <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/barrier"
                app:barrierDirection="end"
                app:constraint_referenced_ids="tv_to,tv_initial_size,tv_from,tv_page_size"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>