<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
        >

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv1"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:background="@color/grey"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/iv1"
                    app:layout_constraintStart_toEndOf="@+id/iv1"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:singleLine="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv1"
                    app:layout_constraintStart_toEndOf="@+id/iv1"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/grey"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv2"
                    app:layout_constraintStart_toEndOf="@+id/iv1"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/grey"
                        app:srcCompat="@drawable/ic_location_black"
                        android:id="@+id/appCompatImageView"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_ll1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="location"
                        android:textColor="@color/grey"
                />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/grey"
                    app:layout_constraintStart_toEndOf="@+id/iv1"
                    app:layout_constraintTop_toBottomOf="@+id/ll1">

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/grey"
                        app:srcCompat="@drawable/ic_group_black"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_ll2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="company"
                        android:textColor="@color/grey"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toTopOf="@id/barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        app:cardBackgroundColor="@color/grey"
                        app:cardElevation="5dp"
                        app:cardCornerRadius="0dp"
                >

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:text="@string/repositories_count"
                            android:textSize="18sp"
                            android:textColor="@color/grey"
                            android:gravity="center"
                    />

                </androidx.cardview.widget.CardView>

                <View android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"/>

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/grey"
                        app:cardElevation="5dp"
                        app:cardCornerRadius="0dp"
                >

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers_count"
                            android:textSize="18sp"
                            android:layout_margin="12dp"
                            android:textColor="@color/grey"
                            android:gravity="center"

                    />

                </androidx.cardview.widget.CardView>

                <View android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"/>

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        app:cardBackgroundColor="@color/grey"
                        app:cardElevation="5dp"
                        app:cardCornerRadius="0dp"
                >

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following_count"
                            android:layout_margin="12dp"
                            android:textSize="18sp"
                            android:textColor="@color/grey"
                            android:gravity="center"
                    />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="iv1,ll2"
            />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</com.facebook.shimmer.ShimmerFrameLayout>